--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 .pycache
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
 
 # Distribution / packaging
 dist/
